[package]
name = "ffi-closure"
description = "Send and recevie closures through FFI"
repository = "https://github.com/Aandreba/ffi-closure"
version = "1.1.0"
edition = "2021"
license = "MIT"
keywords = ["ffi", "closure", "c", "abi"]
categories = [
    "data-structures",
    "development-tools::ffi",
    "external-ffi-bindings",
    "no-std",
    "rust-patterns",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
nightly = []

[dependencies]
cfg-if = "1.0.0"
docfg = "0.1.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
